rnsc/test_data/rns_integration/error/parser/inner_directive/trailing_tokens_recovers.rns
; Tests that parser continues after trailing tokens error and reports subsequent errors
; Expected errors: E-032 (inner trailing tokens), E-034 (unexpected token in inner body)

.class public MyClass
.super java/lang/Object

.inner Inner trailing_tokens
    .super java/lang/Object

     unknown_token ; <- E-034, still reported after recovery
.inner_end

.class_end
